# Ghost-Sdk

./: .gitignore  ANNOUNCEMENT.txt  README.md  TRUSTED_SETUP.md  ghost-cli.bat  ghost-config.json  package.json  test-cli-quick.js  tsconfig.json
circuits/: balance.circom  build-circuits.bat  build.sh  package-lock.json  package.json  ring_signature.circom  transfer.circom
examples/dao-voting/: README.md
examples/dao-voting/src/: DAOVoting.tsx
examples/nft-marketplace/: README.md
examples/nft-marketplace/src/: NFTMarketplace.tsx
examples/private-dex/: README.md
examples/private-dex/src/: PrivateDEX.tsx
examples/private-staking/: README.md
examples/private-staking/src/: PrivateStaking.tsx
examples/ultimate-privacy-app/: README.md  package.json
ghost-cli-test/: ghost-interactive.ts  ghost-privacy-safe.ts  ghost-real-simple.ts  ghost-simple-test.ts  ghost-with-privacy.ts  package-lock.json  package.json  privacy-utils.js
ghost-cli-test/privacy/: program-integration.ts  ring-signatures.ts  shielded-pool.ts  zk-proofs.ts
monitoring/: README.md  dashboard-server.ts  metrics-collector.ts  package.json
monitoring/public/: index.html
privacy-integration/: cli.ts  merkletree.ts  note-manager.ts  package-lock.json  package.json  privacy-sdk.ts  relayer-registry.ts  relayer-service.ts  solana-client.ts  start-relayer.bat  store-verification-keys.ts  tsconfig.json  types.d.ts  zkproof.ts
programs/ghost-privacy/: Cargo.toml
programs/ghost-privacy/src/: instruction.rs  lib.rs  processor.rs  state.rs  verifier.rs
scripts/: quick-privacy-setup.js
(+1 files in other folders)
