[package]
name = "ghost-privacy"
version = "0.1.0"
description = "Ghost Privacy Protocol - Solana program for private transactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_privacy"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "~1.17.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"

# Crypto dependencies
ark-bn254 = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
spl-associated-token-account = "1.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
